--- a/recordplayer.css
+++ b/recordplayer.css
@@ -1,5 +1,5 @@
 .record {
-  background: url(http://rs1037.pbsrc.com/albums/a454/redwine-n-strawberries/I%20Adore/kool9-fragglerock.gif~c200) center center #222222;
+  background: url(http://doge2048.com/meta/doge-600.png) center center #222222;
   background-size: cover;
   border: #000 solid 35px;
   border-radius: 50%;
